--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
 
-    <!-- Create an iframe tag-->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53609.24353486479!2d-96.8379693827996!3d32.88289051582543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e9fe532f1c4c1%3A0xb0dfb33f675d70b2!2sCentral+Park!5e0!3m2!1sen!2sus!4v1561321591326!5m2!1sen!2sus" width="100%" height="400px" frameborder="1" style="border:0" allowfullscreen></iframe>
 
   </body>
 </html>
